--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <hr/>
         <section id="downloads">
         <center>
-          <a href="https://github.com/jonathan-beard/RaftLib/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/jonathan-beard/RaftLib/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/jonathan-beard/RaftLib" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/RaftLib/RaftLib/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/RaftLib/RaftLib/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/RaftLib/RaftLib" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </center>
         </section>
       </div>
@@ -70,6 +70,8 @@
 
 <h3><a id="status" class="anchor" href="#want" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tutorials:</a></h3>
 <ul>
+<!-- copy and paste. Modify height and width if desired. --><iframe class="tscplayer_inline embeddedObject" name="tsc_player" scrolling="no" frameborder="0" type="text/html" style="overflow:hidden;" src="http://www.screencast.com/users/probablyjonathan/folders/Default/media/a437f1d7-da4c-4888-aa3a-ccd75dfa40de/embed" height="60" width="80" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+
 <a href="http://sched.co/6Sg8" target="_tab">CppNow</a> - RaftLib tutorial, <a href="http://www.jonathanbeard.io/pdf/cppnow2016.pdf">slides</a> and <a href="http://www.screencast.com/t/4Q5nXf3WXJ" target="_tab">video</a> (official one coming to YouTube channel soon).
 </ul>
 
