--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="social">
             <center>
             <h3>Spread the Word</h3>
-               <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://raftlib.io" data-text="Simple, easy to use stream parallel computation library for C++" data-counturl="http://raftlib.io" data-count="horizontal"  data-via="jonathan_beard" data-lang="en">Tweet</a>
+               <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://raftlib.io" data-text="Simple, easy to use stream parallel computation library for C++" data-counturl="http://raftlib.io" data-count="horizontal"  data-via="raftlib" data-lang="en">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                <a href="https://twitter.com/intent/tweet?button_hashtag=RaftLib&text=Check out RaftLib, the easy to use stream parallel computation library for C++" class="twitter-hashtag-button" data-related="jonathan_beard" data-url="http://raftlib.io" data-dnt="true">Tweet #RaftLib</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -70,7 +70,6 @@
 
 <h3><a id="status" class="anchor" href="#want" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tutorials:</a></h3>
 <ul>
-<!-- copy and paste. Modify height and width if desired. --><iframe class="tscplayer_inline embeddedObject" name="tsc_player" scrolling="no" frameborder="0" type="text/html" style="overflow:hidden;" src="http://www.screencast.com/users/probablyjonathan/folders/Default/media/a437f1d7-da4c-4888-aa3a-ccd75dfa40de/embed" height="60" width="80" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 
 <a href="http://sched.co/6Sg8" target="_tab">CppNow</a> - RaftLib tutorial, <a href="http://www.jonathanbeard.io/pdf/cppnow2016.pdf">slides</a> and <a href="http://www.screencast.com/t/4Q5nXf3WXJ" target="_tab">video</a> (official one coming to YouTube channel soon).
 </ul>
