--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>RaftLib</h1>
+        <h1><img src="images/raftlibLogo.png" height="64px" width="64px"/> $>./ RaftLib</h1>
         <h2>Simple, easy to use stream parallel computation library for C++.</h2>
         <hr/>
         <section id="downloads">
