--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section id="buildstats">
             <center>
             <h3>CI Build Status</h3>
-<a href="https://travis-ci.org/jonathan-beard/RaftLib"><img src="https://travis-ci.org/jonathan-beard/RaftLib.svg?branch=master" alt="Build Status"></a>
+<a href="https://travis-ci.org/RaftLib/RaftLib"><img src="https://travis-ci.org/RaftLib/RaftLib.svg?branch=master" alt="Build Status"></a>
             </center>
         </section>
       </div>
