--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ $ sudo make install
     library (assuming it's installed) by adding
 </p>
 
-<div class="highlight highlight-source-shell"><pre>-DUSESCOTCH=1=<span class="pl-c1">true</span></pre></div>
+<div class="highlight highlight-source-shell"><pre>-DUSESCOTCH=1</pre></div>
 
 
 <p>If you don't have boost installed, the <tt>cmake</tt> invocation will download the needed <a href="http://www.boost.org" target="_tab">Boost</a> headers (this works well for the initial build, however it is recommended that you install boost if you intend to build many RaftLib applications outside of the build directory. The make command will generate the static library file <em>libraft.a</em>, as well as test cases and all the example applications. These examples can be found in:</p>
