--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <h1><img src="images/raftlibLogo.png" height="64px" width="64px"/> $>./ RaftLib</h1>
         <div itemscope itemtype="http://schema.org/SoftwareSourceCode">
-        <h2 itemprop="about">Simple, easy to use stream parallel computation library for <span itemprop="programmingLanguage">C++</span>.</h2>
+        <h2 itemprop="about">C++ library for streaming/dataflow concurrency via <span itemprop="programmingLanguage">C++</span> iostream-like operators.</h2>
         </div>
         <hr/>
         <div itemscope itemtype="http://schema.org/SoftwareSourceCode">
