--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="container">
-        <h1><img src="images/rl.svg" height="128px" width="128px"/> $>./ RaftLib</h1>
+        <h1><img src="images/rl2.svg" height="128px" width="128px"/> $>./ RaftLib</h1>
         <div itemscope itemtype="http://schema.org/SoftwareSourceCode">
         <h2 itemprop="about">C++ library for streaming/dataflow concurrency via <span itemprop="programmingLanguage">C++</span> iostream-like operators.</h2>
         </div>
