--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ is subject to updates if needed (although we're taking pains to support needed o
 <a id="setup" class="anchor" href="#setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setup</h3>
 <p>To checkout the library and build RaftLib (along with all examples) do the following:</p>
 <pre><code>$ cd location_for_the_repo
-$ git clone git@github.com:jonathan-beard/RaftLib.git
+$ git clone git@github.com:RaftLib/RaftLib.git
 $ mkdir build
 $ cd build
 $ cmake ../RaftLib
