--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 <li><a href="https://www.linkedin.com/shareArticle?mini=true&url=http://www.raftlib.io&title=RaftLib&summary=Simple%2C%20easy%20to%20use%20stream%20computation%20library%20for%20C%2B%2B&source=http://www.raftlib.io"><i class="fa fa-lg fa-linkedin"></i></a></li>
                 <li>
                 <a href="https://news.ycombinator.com/submitlink?u=http://www.raftlib.io&t=Simple, easy to use stream computation library for C++." rel="alternate"><i class="fa fa-lg fa-hacker-news" aria-hidden="true"></i></a></li>
+            </ul>
+            <ul class="nav navbar">
+
                 <li><a itemprop="codeRepository"  href="https://github.com/RaftLib/RaftLib/zipball/master" class="btn">Download as .zip</a></li>
                 <li><a itemprop="codeRepository" href="https://github.com/RaftLib/RaftLib/tarball/master" class="btn">Download as .tar.gz</a></li>
                 <li><a itemprop="codeRepository" href="https://github.com/RaftLib/RaftLib" class="btn"><span class="icon"></span>View on GitHub</a></li>
