--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@
          <br/>
 
          <h3>
-                    <a href="https://youtu.be/IiQ787fJgmU" class="high" target="_tab">RaftLib Tutorial at C++Now2017</a></h3>
+                    <a href="https://www.youtube.com/watch?v=IiQ787fJgmU" class="high" target="_tab">RaftLib Tutorial at C++Now2017</a></h3>
                
         </div>
 
@@ -100,7 +100,7 @@ were looking for.
         <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Jonathan Beard 2017</p>
+            <p>Copyright &copy; Jonathan Beard 2018</p>
         </div>
     </footer>
 
