--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
 
          <h3>
                     <a href="https://www.youtube.com/watch?v=IiQ787fJgmU" class="high" target="_tab">RaftLib Tutorial at C++Now2017</a></h3>
-               
+        <h3><a href="https://join.slack.com/t/raftlib/shared_invite/enQtMjk3MjYyODYxODYzLWM5YmMxZTE1YmY0NDIwZTFkNmE1OThhMTUxOGZlYWI5MmE4ZjViZWI1OWI5ZGRmNTdmYWMwNWJjN2VkOWEwOTM">Join Slack Channel</a></h3>       
         </div>
 
                 </div>
